fixed Read More blog , updated authnavbar UI , fixed alignments , added space for adsense , added support for adsense

--- a/client/src/input.css
+++ b/client/src/input.css
@@ -27,3 +27,8 @@ body {
 .blog-icons{
     @apply hover:scale-110 cursor-pointer
 }
+
+.p-ellipse{
+    @apply  overflow-hidden max-w-[30rem]
+  
+   }
